# ratfist-stm32

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile  Doxyfile.in
ld/: stm32f072rb.ld  stm32f411ve.ld
rust/: Cargo.toml  rustfmt.toml
rust/src/: lib.rs  machine.rs  spinner.rs
rust/src/bindings/: bsp.rs  constants.rs  errors.rs  message_dispatcher.rs  messages.rs  mod.rs  worker.rs
rust/src/bsp/: gpio.rs  mod.rs  stm32f072discovery.rs  stm32f411discovery.rs
rust/src/bsp/i2c/: i2c_v1.rs  mod.rs
rust/src/i2c/: i2c_v1.rs  mod.rs
rust/src/meteo/: bmp085.rs  mod.rs  tsl2651.rs
rust/src/spinner/: bsp.rs  mod.rs  spinner.rs
src/: bsp.h  constants.h  errors.h  events.c  events.h  main.c  message_dispatcher.c  message_dispatcher.h  messages.c  messages.h  worker.c  worker.h
src/meteo/: meteo.c  meteo.h
src/meteo/stm32f411discovery/: bsp.c
src/rust-bindings/: spinner.h
src/spinner/: bsp.h  constants.h  spinner.c  spinner.h
src/spinner/stm32f072-discovery/: constants.h
src/spinner/stm32f072discovery/: bsp.c
src/spinner/stm32f411discovery/: bsp.c  constants.h
src/stm32f072-discovery/: bsp.c  constants.h
src/stm32f072discovery/: bsp.c
src/stm32f411-discovery/: bsp.c
src/stm32f411discovery/: bsp.c  constants.h
tests/: CMakeLists.txt  test_dispatcher.c  test_messages.c  test_spinner.c
tests/stubs/include/ratfist_stubs/: message_dispatcher_stub_helpers.h  messages_stub_helpers.h  worker_stub_helpers.h
tests/stubs/ratfist/: message_dispatcher.c  messages.c  worker.c
tests/stubs/ratfist/spinner/: bsp.c
utils/: build_all.sh  comm_tester.py  generate_rust_bindings.sh
