[package]
name = "ratfist-stm32"
version = "0.2.0"
authors = ["Ondrej Palenicek <ondrej.palenicek@gmail.com>"]

[lib]
name = "ratfist"
crate-type = ["staticlib"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[features]
spinner = []


[dependencies]

[dependencies.mouros-rust-bindings]
path = "../libsrc/mouros/rust"