[package]
name = "ratfist-stm32"
version = "0.2.0"
authors = ["Ondrej Palenicek <ondrej.palenicek@gmail.com>"]

[lib]
name = "ratfist"
crate-type = ["staticlib"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[features]
spinner = []
meteo = []
stm32f411discovery = []
stm32f072discovery = []


[dependencies]
volatile-register = "0.2"

[dependencies.mouros-rust-bindings]
path = "../libsrc/mouros/rust"